Normalised training data

--- a/examples/01_Simple_GP_Regression/Simple_GP_Regression_With_LOVE_Fast_Variances_CUDA.ipynb
+++ b/examples/01_Simple_GP_Regression/Simple_GP_Regression_With_LOVE_Fast_Variances_CUDA.ipynb
@@ -43,17 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading 'skillcraft' UCI dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import urllib.request\n",
     "import os.path\n",
@@ -66,17 +58,20 @@
     "    \n",
     "data = torch.Tensor(loadmat('skillcraft.mat')['data'])\n",
     "X = data[:, :-1]\n",
-    "X = X - X.min(0)[0]\n",
-    "X = 2 * (X / X.max(0)[0]) - 1\n",
     "y = data[:, -1]\n",
     "\n",
+    "def normalize(X):\n",
+    "    X = X - X.min(0)[0]\n",
+    "    X = 2 * (X / X.max(0)[0]) - 1\n",
+    "    return X\n",
+    "    \n",
     "# Use the first 80% of the data for training, and the last 20% for testing.\n",
     "train_n = int(floor(0.4*len(X)))\n",
     "\n",
-    "train_x = X[:train_n, :].contiguous().cuda()\n",
+    "train_x = normalize(X[:train_n, :]).contiguous().cuda()\n",
     "train_y = y[:train_n].contiguous().cuda()\n",
     "\n",
-    "test_x = X[train_n:, :].contiguous().cuda()\n",
+    "test_x = normalize(X[train_n:, :]).contiguous().cuda()\n",
     "test_y = y[train_n:].contiguous().cuda()"
    ]
   },
@@ -91,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,11 +125,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tpin3694/anaconda3/lib/python3.6/site-packages/gpytorch/utils/pivoted_cholesky.py:101: UserWarning: torch.potrs is deprecated in favour of torch.cholesky_solve and will be removed in the next release. Please use torch.cholesky instead and note that the :attr:`upper` argument in torch.cholesky_solve defaults to ``False``.\n",
+      "  R = torch.potrs(low_rank_mat, torch.cholesky(shifted_mat, upper=True))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter 1/20 - Loss: 0.991\n",
+      "Iter 2/20 - Loss: 0.930\n",
+      "Iter 3/20 - Loss: 0.888\n",
+      "Iter 4/20 - Loss: 0.837\n",
+      "Iter 5/20 - Loss: 0.781\n",
+      "Iter 6/20 - Loss: 0.738\n",
+      "Iter 7/20 - Loss: 0.689\n",
+      "Iter 8/20 - Loss: 0.642\n",
+      "Iter 9/20 - Loss: 0.598\n",
+      "Iter 10/20 - Loss: 0.556\n",
+      "Iter 11/20 - Loss: 0.516\n",
+      "Iter 12/20 - Loss: 0.477\n",
+      "Iter 13/20 - Loss: 0.434\n",
+      "Iter 14/20 - Loss: 0.396\n",
+      "Iter 15/20 - Loss: 0.358\n",
+      "Iter 16/20 - Loss: 0.330\n",
+      "Iter 17/20 - Loss: 0.294\n",
+      "Iter 18/20 - Loss: 0.258\n",
+      "Iter 19/20 - Loss: 0.228\n",
+      "Iter 20/20 - Loss: 0.205\n",
+      "CPU times: user 613 ms, sys: 86.4 ms, total: 700 ms\n",
+      "Wall time: 695 ms\n"
+     ]
+    }
+   ],
    "source": [
     "# Find optimal model hyperparameters\n",
     "model.train()\n",
@@ -176,9 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tpin3694/anaconda3/lib/python3.6/site-packages/gpytorch/utils/pivoted_cholesky.py:101: UserWarning: torch.potrs is deprecated in favour of torch.cholesky_solve and will be removed in the next release. Please use torch.cholesky instead and note that the :attr:`upper` argument in torch.cholesky_solve defaults to ``False``.\n",
+      "  R = torch.potrs(low_rank_mat, torch.cholesky(shifted_mat, upper=True))\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -195,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to compute exact mean + covariances: 0.13s\n"
+      "Time to compute exact mean + covariances: 0.23s\n"
      ]
     }
    ],
@@ -221,16 +262,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GaussianLikelihood()"
+       "GaussianLikelihood(\n",
+       "  (noise_covar): HomoskedasticNoise()\n",
+       ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,9 +304,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tpin3694/anaconda3/lib/python3.6/site-packages/gpytorch/utils/pivoted_cholesky.py:101: UserWarning: torch.potrs is deprecated in favour of torch.cholesky_solve and will be removed in the next release. Please use torch.cholesky instead and note that the :attr:`upper` argument in torch.cholesky_solve defaults to ``False``.\n",
+      "  R = torch.potrs(low_rank_mat, torch.cholesky(shifted_mat, upper=True))\n"
+     ]
+    }
+   ],
    "source": [
     "# Set into eval mode\n",
     "model.eval()\n",
@@ -287,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,15 +352,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to compute mean + covariances (no cache) 0.06s\n",
-      "Time to compute mean + variances (cache): 0.02s\n"
+      "Time to compute mean + covariances (no cache) 0.04s\n",
+      "Time to compute mean + variances (cache): 0.01s\n"
      ]
     }
    ],
@@ -330,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE between exact covar matrix and fast covar matrix: 3.323644705233164e-05\n"
+      "MAE between exact covar matrix and fast covar matrix: 0.0011074587237089872\n"
      ]
     }
    ],
@@ -352,6 +404,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
