--- a/examples/09_Pyro_Integration/Pyro_SVDKL_GridInterp.ipynb
+++ b/examples/09_Pyro_Integration/Pyro_SVDKL_GridInterp.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gpleiss/anaconda3/envs/gpytorch/lib/python3.7/site-packages/matplotlib/__init__.py:999: UserWarning: Duplicate key in file \"/home/gpleiss/.dotfiles/matplotlib/matplotlibrc\", line #57\n",
-      "  (fname, cnt))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import torch\n",
@@ -36,7 +27,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading '3droad' UCI dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "import urllib.request\n",
     "import os.path\n",
@@ -49,18 +48,21 @@
     "    \n",
     "data = torch.Tensor(loadmat('3droad.mat')['data'])\n",
     "X = data[:, :-1]\n",
-    "X = X - X.min(0)[0]\n",
-    "X = 2 * (X / X.max(0)[0]) - 1\n",
     "y = data[:, -1]\n",
+    "\n",
+    "def normalize(X):\n",
+    "    X = X - X.min(0)[0]\n",
+    "    X = 2 * (X / X.max(0)[0]) - 1\n",
+    "    return X\n",
     "\n",
     "# Use the first 80% of the data for training, and the last 20% for testing.\n",
     "train_n = int(floor(0.8*len(X)))\n",
     "\n",
-    "train_x = X[:train_n, :].contiguous().cuda()\n",
+    "train_x = normalize(X[:train_n, :]).contiguous().cuda()\n",
     "train_y = y[:train_n].contiguous().cuda()\n",
     "\n",
-    "test_x = X[train_n:, :].contiguous().cuda()\n",
-    "test_y = y[train_n:].contiguous().cuda()"
+    "test_x = normalize(X[train_n:, :]).contiguous().cuda()\n",
+    "test_y = normalize(y[train_n:]).contiguous().cuda()"
    ]
   },
   {
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
     "        self.mean_module = gpytorch.means.ConstantMean()\n",
     "        self.covar_module = gpytorch.kernels.ScaleKernel(gpytorch.kernels.RBFKernel(\n",
     "            lengthscale_prior=gpytorch.priors.SmoothedBoxPrior(0.001, 1., sigma=0.1, transform=torch.exp\n",
-    "        ))\n",
+    "        )))\n",
     "\n",
     "    def forward(self, x):\n",
     "        mean_x = self.mean_module(x)\n",
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -187,16 +189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tpin3694/anaconda3/lib/python3.6/site-packages/gpytorch/utils/pivoted_cholesky.py:101: UserWarning: torch.potrs is deprecated in favour of torch.cholesky_solve and will be removed in the next release. Please use torch.cholesky instead and note that the :attr:`upper` argument in torch.cholesky_solve defaults to ``False``.\n",
+      "  R = torch.potrs(low_rank_mat, torch.cholesky(shifted_mat, upper=True))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1   Loss 1361756.0124511719\n",
-      "Epoch 2   Loss 1443523.3786621094\n",
-      "Epoch 3   Loss 1332343.6667480469\n"
+      "Epoch 1   Loss 1487268.2843017578\n",
+      "Epoch 2   Loss 1473297.0333251953\n",
+      "Epoch 3   Loss 1410556.7141113281\n"
      ]
     }
    ],
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test MAE: 10.290990829467773\n"
+      "Test MAE: 7.333869457244873\n"
      ]
     }
    ],
@@ -258,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
